--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,18 @@
     font-family: var(--font-inter);
   }
 }
+
+
+/* Marquee Animation */
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 30s linear infinite;
+}
